[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/Automata/Styles/Blank_Stylebox.tres" type="StyleBox" id=1]
[ext_resource path="res://addons/Automata/Resources/Red_Triangle.png" type="Texture" id=2]
[ext_resource path="res://addons/Automata/Nodes/TransitionNode.gd" type="Script" id=3]
[ext_resource path="res://addons/Automata/Styles/textbox_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/Automata/Styles/TextBox.tres" type="StyleBox" id=5]

[node name="TransitionNode" type="GraphNode"]
rect_pivot_offset = Vector2( 21, 21 )
custom_styles/frame = ExtResource( 1 )
offset = Vector2( -34, -70 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="VBoxContainer" parent="."]
margin_right = 42.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TriangleButtonContainer" type="VBoxContainer" parent="ContentContainer"]
margin_right = 42.0
margin_bottom = 42.0

[node name="TriangleButton" type="TextureButton" parent="ContentContainer/TriangleButtonContainer"]
margin_right = 42.0
margin_bottom = 42.0
rect_min_size = Vector2( 42, 42 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="PropertiesContainer" type="VBoxContainer" parent="ContentContainer"]
visible = false
margin_top = 46.0
margin_right = 110.0
margin_bottom = 182.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="member_name_lineedit" type="LineEdit" parent="ContentContainer/PropertiesContainer"]
margin_right = 110.0
margin_bottom = 32.3292
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
expand_to_text_length = true

[node name="comparison_container" type="HBoxContainer" parent="ContentContainer/PropertiesContainer"]
margin_top = 36.0
margin_right = 110.0
margin_bottom = 56.0

[node name="ItemList" type="OptionButton" parent="ContentContainer/PropertiesContainer/comparison_container"]
margin_right = 53.0
margin_bottom = 20.0
rect_min_size = Vector2( 48, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "int"
items = [ "int", null, false, 0, null, "float", null, false, 1, null, "bool", null, false, 2, null, "string", null, false, 3, null ]
selected = 0

[node name="ItemList2" type="OptionButton" parent="ContentContainer/PropertiesContainer/comparison_container"]
margin_left = 57.0
margin_right = 110.0
margin_bottom = 20.0
rect_min_size = Vector2( 48, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "=="
items = [ "==", null, false, 0, null, "!=", null, false, 1, null, ">", null, false, 2, null, ">=", null, false, 3, null, "<", null, false, 4, null, "<=", null, false, 5, null ]
selected = 0

[node name="on_exit_lineedit" type="LineEdit" parent="ContentContainer/PropertiesContainer"]
margin_top = 60.0
margin_right = 110.0
margin_bottom = 92.3292
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
expand_to_text_length = true

[node name="HSeparator" type="HSeparator" parent="ContentContainer/PropertiesContainer"]
margin_top = 96.0
margin_right = 110.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_container" type="HBoxContainer" parent="ContentContainer/PropertiesContainer"]
margin_top = 104.0
margin_right = 110.0
margin_bottom = 136.0

[node name="delete_button" type="Button" parent="ContentContainer/PropertiesContainer/button_container"]
margin_right = 61.2937
margin_bottom = 32.3292
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.984314, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.929412, 0.611765, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 0.282353, 0.0980392, 0.0980392, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "delete"

[node name="save_button" type="Button" parent="ContentContainer/PropertiesContainer/button_container"]
margin_left = 65.0
margin_right = 110.294
margin_bottom = 32.3292
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.647059, 0.937255, 0.67451, 1 )
custom_colors/font_color_pressed = Color( 0.290196, 0.431373, 0.301961, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "okay"
